<resources>
    <string name="app_name">Chernobyl Tours</string>
    <string name="choose_language">Choose language</string>
    <string name="en_click_me">Click image to set English</string>
    <string name="sp_click_me">Cliquez sur l\'image pour définir l'espagnol</string>
    <string name="fr_click_me">Cliquez sur l\'image pour définir le français</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">299931483831093</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb299931483831093</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAv6U6eH2WbidLdc81XZNKYc1LOKR1JqN0
    </string>
    <string name="first_time_here"><a href="https://www.tourkiev.com/">First time here?</a></string>
    <string name="loading">Loading</string>
    <string name="tour_starting_point">Tour Starting Point</string>
    <string name="kreschatic_street">Kreschatik Street</string>
    <string name="podol">Podol</string>
    <string name="novi_petrivtsi">Novi Petrivtsi</string>
    <string name="dymer">Dymer</string>
    <string name="katyuzhanka">Katyuzhanka</string>
    <string name="ivankiv">Ivankiv</string>
    <string name="dityatki_check_point">Dityatki Check Point</string>
    <string name="thirty_k_zone">30k zone</string>
    <string name="zalesye_village">Zalesye Village</string>
    <string name="chornobyl">Chornobyl</string>
    <string name="trumpeting_angel_of_chornobyl">Trumpeting Angel of Chernobyl</string>
    <string name="monuments_to_liquidator">Monuments to liquidator</string>
    <string name="robots">Robots</string>
    <string name="elijah_church">Elijah church</string>
    <string name="radar_duga">Radar Duga</string>
    <string name="kopachi_village">Kopachi Village</string>
    <string name="first_part_of_reactor">1st part Nuclear Power Plant</string>
    <string name="chernobyl_new_safe_confinement">Chernobyl New Safe Confinement</string>
    <string name="second_part_power_part">2nd part power plant</string>
    <string name="pripyat_town">Pripyat town</string>
    <string name="pripyat_river_point">Pripyat river point</string>
    <string name="centre">Centre</string>
    <string name="ferris_wheel">Ferris wheel</string>
    <string name="stadium_avangard">Stadium avangard</string>
    <string name="swimming_pool">Swimming pool</string>
    <string name="jupiter_factory">Jupiter factory</string>
    <string name="police_station">Police station</string>
    <string name="tour_starting_point_description">We start our journey from the down town of Kiev, capital of Ukraine.  Since 2000 SoloEast Travel vehicles would leave this meeting point on the Independence Square to the World\'s Most Unique Places To Visit - Chernobyl Exclusion Land.  It takes two hours to get to the check point to the zone. Usually we play a documentary you can watch now - which is in English. Or you can keep listening to our guide in your language.</string>
    <string name="kreshatik_street_description">Now we enter the main street in Kiev - Kreschatik street. Once the hunting ground for princes and nobleman, Kreschatik used to be known for its magnificent landscapes, lush valleys and sparkling rivers. Construction on the site began in the eighteenth century as dwellings began to take shape on the land, with historical buildings such as the Kiev Theater the first to be built in the city in 1805. By 1837 Kreschatik was considered to be one of the most modern streets in Ukraine, and has retained its popularity as a landmark of the city and a well-known tourist destination. As the street became paved and architectural wonders began to line the chestnut tree filled Kreschatik, it developed into a playground for the rich and famous. It is still synonymous with luxury, elegance and high fashion. During both World War I and World War II, the street came into the line of fire and was almost completely destroyed. Fortunately, reconstruction efforts were begun immediately after the war came to an end in 1943 and saw to it that the street became a little wider and buildings began to take higher forms. Kreschatik was also always ahead of the news, having newspapers from Moscow, Belgium and other countries and cities delivered to the shops and home owners living along the street. Its charm and refined street lights can still be viewed to today. Even though the historical buildings are still decorating the street, it has continued to be a trendy site as visitors will find the latest fashions and most exquisite restaurants situated here. Confectionaries, hotels and department stores provide the best Kiev has to offer, and is as popular with locals as it is with tourists. Other attractions on Kreschatik include the National Philharmonic, trade buildings, international banking institutions, the Stolipin Monument, the Alexander the Liberator Monument, Nezalezhnosti Square, European Square, Franko Theater and the Verkhovna Rada. Kreschatik is more than just an attraction or street lined with history and wonder. It is the pride of Kiev and a way of life to many. Visitors to Kiev are recommended to stroll down Kreschatik, where they will be able to experience the heritage of the city, as well as the style of the high society in Ukraine.</string>
    <string name="podol_description">We are entering famous Kiev\'s district called Podol.  It is one of the oldest neighborhoods of Kyiv, and the birthplace of the city\'s trade, commerce and industry. It contains many architectural and historical landmarks, and new archaeological sites are still being revealed.  The name “Podil” means something that is situated downwards. This area used to be the trading and crafting center of Kyiv. The names of some Podil neighborhoods reflect this fact: \"Dehtyari\" (those who works with tar), \"Honchari\" (potters), \"Kozhemyaki\" (craftsmen working with leather). On the territory of Podil were found ancient constructions, some of them date back to 9th–11th century. Intensive building within Podil took place in the 17th century. An annual fair was conducted since 1797.  Before the Great Podil fire of 1811 it was the most populous neighborhood of the city with 2,068 houses out of 3,672 dwellings in all of Kyiv. The fire damaged the neighborhood extensively and changed the appearance of Podil dramatically. After the fire Podil was newly planned and a large number of new streets appeared, which still exist today. At this time were constructed such buildings as Contract\'s House, the National University of Kyiv-Mohyla Academy, shopping arcade and others.  Until World War II, the section just north of Nyzhniy Val street was called Ploska chast or Ploskaya sloboda. It was home to many poor Jews who lived there in wretched conditions.</string>
    <string name="novi_petrivtsi_description">We are passing by Novi Petrivtsi, one of Ukrainian villages, which got popular for the territory of the former Mezhyhirya Monastery that in 2008-2009 was in the epicenter of a big political scandal.   The huge house and extensive grounds (including a Zoo!) was the former private residence of the 4th President of Ukraine Viktor Yanukovych The territory is enclosed by a five meter tall fence along the 54 km (34 mi) perimeter. On its territory are located a yacht pier, equestrian club, shooting range, tennis court and many other recreational tourism complexes as well as hunting grounds. Mezhyhirya required a staffing level of 2,000 people and daily maintenance costs of $75,000.  This unbelievable waste and political corruption ended in 2014 when Yanukovych was forced to resign during the Revolution of Dignity. Today the Mezhyhirya Residence is a modern day palace, and for visitors it is an interesting alternative day trip for longer holidays based in Kiev.</string>
    <string name="dymer_description">We are approaching to a village called Dymer. It was found in X-XI. Dymer\'s name came from the word \"дым\" which means smog in English. Because of many factories they had there was much of smog around the town. That\'s why it got such name. It used to be a Polish town until 1703. Then Semen Paliy crashed in and took over lordship over the territory. Dymer never was the same. It became a village with lot\'s of memories. Nevertheless Dymer is not the tiniest settlement in Ukraine.   Beyond all the factories it has, there are also a sewing factory, three gas stations, auto park, two schools, two libraries, centre of art, musical school and a hospital.</string>
    <string name="katyachanka_description">Now we are passing by an ancient village called Katyuzhanka. It was found in 1500s. It\'s name came from the first inhabitant Katyuga. Katyuzhanka gave us two very famous actresses - anchorweman Olga and Natalia Sumska.  There is also one more interesting thing it is famous for. About 500 people come here each weekends to get healed from smoking, drinking alcohol etc. Orthodox priest Olexander listens to everyone\'s needs in turns and explains that they\'ll be badly punished by God if they smoke or drink alcohol during the year. If someone can\'t live without at least one cigarette a day, they will be allowed to take some. But not more than they would agree with the priest.</string>
    <string name="ivankiv_description">Here we are in Ivankiv where we can see an interesting monument. So called \"Egg of Life\". Sculpture quite unusual, and this attracts the attention of tourists. \"Egg life\" was established in 2000. This concrete work of art was donated to the village by the German architect A. Kolbe. The monument is a symbol of rebirth and fertility life I land affected after the Chernobyl tragedy.   In the middle of the 15th century the territory around modern Ivankiv was called Zemlya Trudinivska (Trudinivska Land). It was a property of Kiev boyar Olehnja Juhnovich. In 1524 King of Poland Sigismund I the Old gave this land to Kiev Burgess Tishko Proskura. In 1589 Ivan Proskura became the owner of this land. The town was founded in 1589 and named after Ivan Proskura. At first it was called Ivaniv and Ivanivka, which were later changed to Ivankiv. At the beginning of the 17th century Crimean Tatars made four military campaigns on Polesia and as a result many people in Ivankiv were killed, taken prisoner and sold into slavery. The town is located 42 miles south from the Chernobyl power plant, with the entrance to the exclusion zone being located 20 miles north. The town was not as affected by the Chernobyl disaster compared to other towns. Ivankiv raion has increased in 1986 after the disestablishment of the Chernobyl Raion due to the Chernobyl disaster. Today Ivankiv Raion administers the former territory of the depopulated region that is majorly part of the zone of alienation and supervised by the Ministry of Emergencies of Ukraine.</string>
    <string name="log_out">Log out</string>
    <string name="about_us">About us</string>
    <string name="language">Language</string>
    <string name="book_a_tour">Book a tour</string>
    <string name="map">Map</string>
</resources>