<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_menu_book"
            android:title="@string/book_a_tour" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_menu_language"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_menu_log_out"
            android:title="@string/log_out" />
    </group>

</menu>
